# multidimensional-wilcoxon-mann-whitney

./: LICENSE  README.md  pyproject.toml
example/: Demo.ipynb
src/multidimensional_wilcoxon_mann_whitney/: __init__.py  multidimensional_ranksum.py
